parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON neupoint_goto_main vars functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
Rule 2     program -> PROGRAM ID SEMICOLON neupoint_goto_main vars MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
Rule 3     program -> PROGRAM ID SEMICOLON neupoint_goto_main functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
Rule 4     program -> PROGRAM ID SEMICOLON neupoint_goto_main MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
Rule 5     neupoint_goto_main -> <empty>
Rule 6     neupoint_fill_goto_main -> <empty>
Rule 7     neupoint_end -> <empty>
Rule 8     data_type -> INT
Rule 9     data_type -> FLOAT
Rule 10    data_type -> CHAR
Rule 11    vars -> VAR vars_lists neupoint_add_vars
Rule 12    vars_lists -> data_type decla_ids_list SEMICOLON vars_lists
Rule 13    vars_lists -> data_type decla_ids_list SEMICOLON
Rule 14    decla_ids_list -> decla_identifier COMMA decla_ids_list
Rule 15    decla_ids_list -> decla_identifier
Rule 16    decla_identifier -> ID LEFTSQRBRACKET CTEINT RIGHTSQRBRACKET LEFTSQRBRACKET CTEINT RIGHTSQRBRACKET
Rule 17    decla_identifier -> ID LEFTSQRBRACKET CTEINT RIGHTSQRBRACKET
Rule 18    decla_identifier -> ID
Rule 19    identifier -> ID neupoint_add_identifier LEFTSQRBRACKET neupoint_index_array exp neupoint_remove_wall RIGHTSQRBRACKET LEFTSQRBRACKET neupoint_index_matrix exp neupoint_remove_wall RIGHTSQRBRACKET neupoint_update_matrix_addr
Rule 20    identifier -> ID neupoint_add_identifier LEFTSQRBRACKET neupoint_index_array exp neupoint_remove_wall RIGHTSQRBRACKET neupoint_update_array_addr
Rule 21    identifier -> ID neupoint_add_identifier
Rule 22    neupoint_add_vars -> <empty>
Rule 23    neupoint_add_identifier -> <empty>
Rule 24    neupoint_index_array -> <empty>
Rule 25    neupoint_index_matrix -> <empty>
Rule 26    neupoint_update_array_addr -> <empty>
Rule 27    neupoint_update_matrix_addr -> <empty>
Rule 28    return_type -> data_type
Rule 29    return_type -> VOID
Rule 30    functions_list -> function functions_list
Rule 31    functions_list -> function
Rule 32    function -> MODULE return_type ID neupoint_add_function parameters_list vars neupoint_start_function block neupoint_check_for_return neupoint_end_function
Rule 33    function -> MODULE return_type ID neupoint_add_function parameters_list neupoint_start_function block neupoint_check_for_return neupoint_end_function
Rule 34    parameters_list -> LEFTPARENTHESIS parameter RIGHTPARENTHESIS neupoint_add_parameters
Rule 35    parameters_list -> LEFTPARENTHESIS RIGHTPARENTHESIS
Rule 36    parameter -> data_type decla_identifier COMMA parameter
Rule 37    parameter -> data_type decla_identifier
Rule 38    neupoint_add_function -> <empty>
Rule 39    neupoint_add_parameters -> <empty>
Rule 40    neupoint_start_function -> <empty>
Rule 41    neupoint_check_for_return -> <empty>
Rule 42    neupoint_end_function -> <empty>
Rule 43    comparators -> COMPARISON
Rule 44    comparators -> GREATERHANOREQUAL
Rule 45    comparators -> LESSTHANOREQUAL
Rule 46    comparators -> GREATERTHAN
Rule 47    comparators -> LESSTHAN
Rule 48    comparators -> DIFFERENT
Rule 49    exp_operator -> PLUS
Rule 50    exp_operator -> MINUS
Rule 51    term_operator -> MULTIPLY
Rule 52    term_operator -> DIVIDE
Rule 53    term_operator -> MOD
Rule 54    block -> LEFTBRACKET statutes_list RIGHTBRACKET
Rule 55    block -> LEFTBRACKET RIGHTBRACKET
Rule 56    statutes_list -> statute statutes_list
Rule 57    statutes_list -> statute
Rule 58    statute -> assignment
Rule 59    statute -> function_return
Rule 60    statute -> reading
Rule 61    statute -> writing
Rule 62    statute -> decision
Rule 63    statute -> loop
Rule 64    statute -> function_call_void
Rule 65    assignment -> identifier EQUALS neupoint_add_operator expresion neupoint_assignment_quad SEMICOLON
Rule 66    assignment -> identifier PLUSEQUALS neupoint_add_operator expresion neupoint_assignment_quad SEMICOLON
Rule 67    assignment -> identifier SUBSTRACTEQUALS neupoint_add_operator expresion neupoint_assignment_quad SEMICOLON
Rule 68    assignment -> identifier INCREMENT neupoint_add_operator neupoint_assignment_single_quad SEMICOLON
Rule 69    assignment -> identifier DECREMENT neupoint_add_operator neupoint_assignment_single_quad SEMICOLON
Rule 70    reading -> READ LEFTPARENTHESIS reading_list RIGHTPARENTHESIS SEMICOLON
Rule 71    reading_list -> identifier COMMA reading_list
Rule 72    reading_list -> identifier
Rule 73    writing -> WRITE LEFTPARENTHESIS writing_list RIGHTPARENTHESIS SEMICOLON
Rule 74    writing_list -> CTESTRING neupoint_add_cte_operand neupoint_write_quad COMMA writing_list
Rule 75    writing_list -> expresion neupoint_write_quad COMMA writing_list
Rule 76    writing_list -> CTESTRING neupoint_add_cte_operand neupoint_write_quad
Rule 77    writing_list -> expresion neupoint_write_quad
Rule 78    decision -> IF LEFTPARENTHESIS expresion RIGHTPARENTHESIS neupoint_conditional_quad THEN block ELSE neupoint_else_conditional_quad block neupoint_end_conditional_quad
Rule 79    decision -> IF LEFTPARENTHESIS expresion RIGHTPARENTHESIS neupoint_conditional_quad THEN block neupoint_end_conditional_quad
Rule 80    loop -> conditional
Rule 81    loop -> non_conditional
Rule 82    conditional -> WHILE neupoint_while_start LEFTPARENTHESIS expresion RIGHTPARENTHESIS neupoint_conditional_quad DO block neupoint_while_end
Rule 83    non_conditional -> FOR ID neupoint_add_operand_integer EQUALS neupoint_add_operator exp neupoint_assignment_quad neupoint_add_operand_for TO exp neupoint_comparison_quad DO block neupoint_for_end
Rule 84    function_return -> RETURN LEFTPARENTHESIS exp RIGHTPARENTHESIS SEMICOLON
Rule 85    function_call_void -> function_call SEMICOLON
Rule 86    function_call -> ID neupoint_validate_function LEFTPARENTHESIS neupoint_era_quad neupoint_add_wall ags_list neupoint_validate_num_args RIGHTPARENTHESIS neupoint_gosub_quad
Rule 87    function_call -> ID neupoint_validate_function LEFTPARENTHESIS neupoint_era_quad neupoint_add_wall neupoint_validate_num_args RIGHTPARENTHESIS neupoint_gosub_quad
Rule 88    ags_list -> expresion neupoint_validate_args COMMA ags_list
Rule 89    ags_list -> expresion neupoint_validate_args
Rule 90    expresion -> exp_relational AND neupoint_add_operator expresion neupoint_logical_relational_opt
Rule 91    expresion -> exp_relational OR neupoint_add_operator expresion neupoint_logical_relational_opt
Rule 92    expresion -> exp_relational
Rule 93    exp_relational -> exp comparators neupoint_add_operator exp neupoint_logical_relational_opt
Rule 94    exp_relational -> exp
Rule 95    exp -> term neupoint_arithmetic_exp_quad exp_operator neupoint_add_operator exp
Rule 96    exp -> term neupoint_arithmetic_exp_quad
Rule 97    term -> factor neupoint_arithmetic_term_quad term_operator neupoint_add_operator term
Rule 98    term -> factor neupoint_arithmetic_term_quad
Rule 99    factor -> LEFTPARENTHESIS neupoint_add_wall expresion neupoint_remove_wall RIGHTPARENTHESIS
Rule 100   factor -> CTEINT neupoint_add_cte_operand
Rule 101   factor -> CTEFLOAT neupoint_add_cte_operand
Rule 102   factor -> CTECHAR neupoint_add_cte_operand
Rule 103   factor -> function_call
Rule 104   factor -> identifier
Rule 105   neupoint_add_operator -> <empty>
Rule 106   neupoint_add_cte_operand -> <empty>
Rule 107   neupoint_arithmetic_exp_quad -> <empty>
Rule 108   neupoint_arithmetic_term_quad -> <empty>
Rule 109   neupoint_add_wall -> <empty>
Rule 110   neupoint_remove_wall -> <empty>
Rule 111   neupoint_assignment_quad -> <empty>
Rule 112   neupoint_assignment_single_quad -> <empty>
Rule 113   neupoint_logical_relational_opt -> <empty>
Rule 114   neupoint_conditional_quad -> <empty>
Rule 115   neupoint_else_conditional_quad -> <empty>
Rule 116   neupoint_end_conditional_quad -> <empty>
Rule 117   neupoint_while_start -> <empty>
Rule 118   neupoint_while_end -> <empty>
Rule 119   neupoint_validate_function -> <empty>
Rule 120   neupoint_era_quad -> <empty>
Rule 121   neupoint_validate_args -> <empty>
Rule 122   neupoint_validate_num_args -> <empty>
Rule 123   neupoint_gosub_quad -> <empty>
Rule 124   neupoint_write_quad -> <empty>
Rule 125   neupoint_add_operand_integer -> <empty>
Rule 126   neupoint_add_operand_for -> <empty>
Rule 127   neupoint_comparison_quad -> <empty>
Rule 128   neupoint_for_end -> <empty>

Terminals, with rules where they appear

AND                  : 90
CHAR                 : 10
COMMA                : 14 36 71 74 75 88
COMPARISON           : 43
CTECHAR              : 102
CTEFLOAT             : 101
CTEINT               : 16 16 17 100
CTESTRING            : 74 76
DECREMENT            : 69
DIFFERENT            : 48
DIVIDE               : 52
DO                   : 82 83
ELSE                 : 78
EQUALS               : 65 83
FLOAT                : 9
FOR                  : 83
GREATERHANOREQUAL    : 44
GREATERTHAN          : 46
ID                   : 1 2 3 4 16 17 18 19 20 21 32 33 83 86 87
IF                   : 78 79
INCREMENT            : 68
INT                  : 8
LEFTBRACKET          : 54 55
LEFTPARENTHESIS      : 1 2 3 4 34 35 70 73 78 79 82 84 86 87 99
LEFTSQRBRACKET       : 16 16 17 19 19 20
LESSTHAN             : 47
LESSTHANOREQUAL      : 45
MAIN                 : 1 2 3 4
MINUS                : 50
MOD                  : 53
MODULE               : 32 33
MULTIPLY             : 51
OR                   : 91
PLUS                 : 49
PLUSEQUALS           : 66
PROGRAM              : 1 2 3 4
READ                 : 70
RETURN               : 84
RIGHTBRACKET         : 54 55
RIGHTPARENTHESIS     : 1 2 3 4 34 35 70 73 78 79 82 84 86 87 99
RIGHTSQRBRACKET      : 16 16 17 19 19 20
SEMICOLON            : 1 2 3 4 12 13 65 66 67 68 69 70 73 84 85
SUBSTRACTEQUALS      : 67
THEN                 : 78 79
TO                   : 83
VAR                  : 11
VOID                 : 29
WHILE                : 82
WRITE                : 73
error                : 

Nonterminals, with rules where they appear

ags_list             : 86 88
assignment           : 58
block                : 1 2 3 4 32 33 78 78 79 82 83
comparators          : 93
conditional          : 80
data_type            : 12 13 28 36 37
decision             : 62
decla_identifier     : 14 15 36 37
decla_ids_list       : 12 13 14
exp                  : 19 19 20 83 83 84 93 93 94 95
exp_operator         : 95
exp_relational       : 90 91 92
expresion            : 65 66 67 75 77 78 79 82 88 89 90 91 99
factor               : 97 98
function             : 30 31
function_call        : 85 103
function_call_void   : 64
function_return      : 59
functions_list       : 1 3 30
identifier           : 65 66 67 68 69 71 72 104
loop                 : 63
neupoint_add_cte_operand : 74 76 100 101 102
neupoint_add_function : 32 33
neupoint_add_identifier : 19 20 21
neupoint_add_operand_for : 83
neupoint_add_operand_integer : 83
neupoint_add_operator : 65 66 67 68 69 83 90 91 93 95 97
neupoint_add_parameters : 34
neupoint_add_vars    : 11
neupoint_add_wall    : 86 87 99
neupoint_arithmetic_exp_quad : 95 96
neupoint_arithmetic_term_quad : 97 98
neupoint_assignment_quad : 65 66 67 83
neupoint_assignment_single_quad : 68 69
neupoint_check_for_return : 32 33
neupoint_comparison_quad : 83
neupoint_conditional_quad : 78 79 82
neupoint_else_conditional_quad : 78
neupoint_end         : 1 2 3 4
neupoint_end_conditional_quad : 78 79
neupoint_end_function : 32 33
neupoint_era_quad    : 86 87
neupoint_fill_goto_main : 1 2 3 4
neupoint_for_end     : 83
neupoint_gosub_quad  : 86 87
neupoint_goto_main   : 1 2 3 4
neupoint_index_array : 19 20
neupoint_index_matrix : 19
neupoint_logical_relational_opt : 90 91 93
neupoint_remove_wall : 19 19 20 99
neupoint_start_function : 32 33
neupoint_update_array_addr : 20
neupoint_update_matrix_addr : 19
neupoint_validate_args : 88 89
neupoint_validate_function : 86 87
neupoint_validate_num_args : 86 87
neupoint_while_end   : 82
neupoint_while_start : 82
neupoint_write_quad  : 74 75 76 77
non_conditional      : 81
parameter            : 34 36
parameters_list      : 32 33
program              : 0
reading              : 60
reading_list         : 70 71
return_type          : 32 33
statute              : 56 57
statutes_list        : 54 56
term                 : 95 96 97
term_operator        : 97
vars                 : 1 2 32
vars_lists           : 11 12
writing              : 61
writing_list         : 73 74 75

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON neupoint_goto_main vars functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (2) program -> . PROGRAM ID SEMICOLON neupoint_goto_main vars MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (3) program -> . PROGRAM ID SEMICOLON neupoint_goto_main functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (4) program -> . PROGRAM ID SEMICOLON neupoint_goto_main MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON neupoint_goto_main vars functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (2) program -> PROGRAM . ID SEMICOLON neupoint_goto_main vars MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (3) program -> PROGRAM . ID SEMICOLON neupoint_goto_main functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (4) program -> PROGRAM . ID SEMICOLON neupoint_goto_main MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON neupoint_goto_main vars functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (2) program -> PROGRAM ID . SEMICOLON neupoint_goto_main vars MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (3) program -> PROGRAM ID . SEMICOLON neupoint_goto_main functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (4) program -> PROGRAM ID . SEMICOLON neupoint_goto_main MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . neupoint_goto_main vars functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (2) program -> PROGRAM ID SEMICOLON . neupoint_goto_main vars MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (3) program -> PROGRAM ID SEMICOLON . neupoint_goto_main functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (4) program -> PROGRAM ID SEMICOLON . neupoint_goto_main MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (5) neupoint_goto_main -> .

    MAIN            reduce using rule 5 (neupoint_goto_main -> .)
    VAR             reduce using rule 5 (neupoint_goto_main -> .)
    MODULE          reduce using rule 5 (neupoint_goto_main -> .)

    neupoint_goto_main             shift and go to state 5

state 5

    (1) program -> PROGRAM ID SEMICOLON neupoint_goto_main . vars functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (2) program -> PROGRAM ID SEMICOLON neupoint_goto_main . vars MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (3) program -> PROGRAM ID SEMICOLON neupoint_goto_main . functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (4) program -> PROGRAM ID SEMICOLON neupoint_goto_main . MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (11) vars -> . VAR vars_lists neupoint_add_vars
    (30) functions_list -> . function functions_list
    (31) functions_list -> . function
    (32) function -> . MODULE return_type ID neupoint_add_function parameters_list vars neupoint_start_function block neupoint_check_for_return neupoint_end_function
    (33) function -> . MODULE return_type ID neupoint_add_function parameters_list neupoint_start_function block neupoint_check_for_return neupoint_end_function

    MAIN            shift and go to state 8
    VAR             shift and go to state 9
    MODULE          shift and go to state 11

    vars                           shift and go to state 6
    functions_list                 shift and go to state 7
    function                       shift and go to state 10

state 6

    (1) program -> PROGRAM ID SEMICOLON neupoint_goto_main vars . functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (2) program -> PROGRAM ID SEMICOLON neupoint_goto_main vars . MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (30) functions_list -> . function functions_list
    (31) functions_list -> . function
    (32) function -> . MODULE return_type ID neupoint_add_function parameters_list vars neupoint_start_function block neupoint_check_for_return neupoint_end_function
    (33) function -> . MODULE return_type ID neupoint_add_function parameters_list neupoint_start_function block neupoint_check_for_return neupoint_end_function

    MAIN            shift and go to state 13
    MODULE          shift and go to state 11

    functions_list                 shift and go to state 12
    function                       shift and go to state 10

state 7

    (3) program -> PROGRAM ID SEMICOLON neupoint_goto_main functions_list . MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end

    MAIN            shift and go to state 14


state 8

    (4) program -> PROGRAM ID SEMICOLON neupoint_goto_main MAIN . neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (6) neupoint_fill_goto_main -> .

    LEFTPARENTHESIS reduce using rule 6 (neupoint_fill_goto_main -> .)

    neupoint_fill_goto_main        shift and go to state 15

state 9

    (11) vars -> VAR . vars_lists neupoint_add_vars
    (12) vars_lists -> . data_type decla_ids_list SEMICOLON vars_lists
    (13) vars_lists -> . data_type decla_ids_list SEMICOLON
    (8) data_type -> . INT
    (9) data_type -> . FLOAT
    (10) data_type -> . CHAR

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20

    vars_lists                     shift and go to state 16
    data_type                      shift and go to state 17

state 10

    (30) functions_list -> function . functions_list
    (31) functions_list -> function .
    (30) functions_list -> . function functions_list
    (31) functions_list -> . function
    (32) function -> . MODULE return_type ID neupoint_add_function parameters_list vars neupoint_start_function block neupoint_check_for_return neupoint_end_function
    (33) function -> . MODULE return_type ID neupoint_add_function parameters_list neupoint_start_function block neupoint_check_for_return neupoint_end_function

    MAIN            reduce using rule 31 (functions_list -> function .)
    MODULE          shift and go to state 11

    function                       shift and go to state 10
    functions_list                 shift and go to state 21

state 11

    (32) function -> MODULE . return_type ID neupoint_add_function parameters_list vars neupoint_start_function block neupoint_check_for_return neupoint_end_function
    (33) function -> MODULE . return_type ID neupoint_add_function parameters_list neupoint_start_function block neupoint_check_for_return neupoint_end_function
    (28) return_type -> . data_type
    (29) return_type -> . VOID
    (8) data_type -> . INT
    (9) data_type -> . FLOAT
    (10) data_type -> . CHAR

    VOID            shift and go to state 24
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20

    return_type                    shift and go to state 22
    data_type                      shift and go to state 23

state 12

    (1) program -> PROGRAM ID SEMICOLON neupoint_goto_main vars functions_list . MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end

    MAIN            shift and go to state 25


state 13

    (2) program -> PROGRAM ID SEMICOLON neupoint_goto_main vars MAIN . neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (6) neupoint_fill_goto_main -> .

    LEFTPARENTHESIS reduce using rule 6 (neupoint_fill_goto_main -> .)

    neupoint_fill_goto_main        shift and go to state 26

state 14

    (3) program -> PROGRAM ID SEMICOLON neupoint_goto_main functions_list MAIN . neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (6) neupoint_fill_goto_main -> .

    LEFTPARENTHESIS reduce using rule 6 (neupoint_fill_goto_main -> .)

    neupoint_fill_goto_main        shift and go to state 27

state 15

    (4) program -> PROGRAM ID SEMICOLON neupoint_goto_main MAIN neupoint_fill_goto_main . LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end

    LEFTPARENTHESIS shift and go to state 28


state 16

    (11) vars -> VAR vars_lists . neupoint_add_vars
    (22) neupoint_add_vars -> .

    MAIN            reduce using rule 22 (neupoint_add_vars -> .)
    MODULE          reduce using rule 22 (neupoint_add_vars -> .)
    LEFTBRACKET     reduce using rule 22 (neupoint_add_vars -> .)

    neupoint_add_vars              shift and go to state 29

state 17

    (12) vars_lists -> data_type . decla_ids_list SEMICOLON vars_lists
    (13) vars_lists -> data_type . decla_ids_list SEMICOLON
    (14) decla_ids_list -> . decla_identifier COMMA decla_ids_list
    (15) decla_ids_list -> . decla_identifier
    (16) decla_identifier -> . ID LEFTSQRBRACKET CTEINT RIGHTSQRBRACKET LEFTSQRBRACKET CTEINT RIGHTSQRBRACKET
    (17) decla_identifier -> . ID LEFTSQRBRACKET CTEINT RIGHTSQRBRACKET
    (18) decla_identifier -> . ID

    ID              shift and go to state 32

    decla_ids_list                 shift and go to state 30
    decla_identifier               shift and go to state 31

state 18

    (8) data_type -> INT .

    ID              reduce using rule 8 (data_type -> INT .)


state 19

    (9) data_type -> FLOAT .

    ID              reduce using rule 9 (data_type -> FLOAT .)


state 20

    (10) data_type -> CHAR .

    ID              reduce using rule 10 (data_type -> CHAR .)


state 21

    (30) functions_list -> function functions_list .

    MAIN            reduce using rule 30 (functions_list -> function functions_list .)


state 22

    (32) function -> MODULE return_type . ID neupoint_add_function parameters_list vars neupoint_start_function block neupoint_check_for_return neupoint_end_function
    (33) function -> MODULE return_type . ID neupoint_add_function parameters_list neupoint_start_function block neupoint_check_for_return neupoint_end_function

    ID              shift and go to state 33


state 23

    (28) return_type -> data_type .

    ID              reduce using rule 28 (return_type -> data_type .)


state 24

    (29) return_type -> VOID .

    ID              reduce using rule 29 (return_type -> VOID .)


state 25

    (1) program -> PROGRAM ID SEMICOLON neupoint_goto_main vars functions_list MAIN . neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end
    (6) neupoint_fill_goto_main -> .

    LEFTPARENTHESIS reduce using rule 6 (neupoint_fill_goto_main -> .)

    neupoint_fill_goto_main        shift and go to state 34

state 26

    (2) program -> PROGRAM ID SEMICOLON neupoint_goto_main vars MAIN neupoint_fill_goto_main . LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end

    LEFTPARENTHESIS shift and go to state 35


state 27

    (3) program -> PROGRAM ID SEMICOLON neupoint_goto_main functions_list MAIN neupoint_fill_goto_main . LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end

    LEFTPARENTHESIS shift and go to state 36


state 28

    (4) program -> PROGRAM ID SEMICOLON neupoint_goto_main MAIN neupoint_fill_goto_main LEFTPARENTHESIS . RIGHTPARENTHESIS block neupoint_end

    RIGHTPARENTHESIS shift and go to state 37


state 29

    (11) vars -> VAR vars_lists neupoint_add_vars .

    MAIN            reduce using rule 11 (vars -> VAR vars_lists neupoint_add_vars .)
    MODULE          reduce using rule 11 (vars -> VAR vars_lists neupoint_add_vars .)
    LEFTBRACKET     reduce using rule 11 (vars -> VAR vars_lists neupoint_add_vars .)


state 30

    (12) vars_lists -> data_type decla_ids_list . SEMICOLON vars_lists
    (13) vars_lists -> data_type decla_ids_list . SEMICOLON

    SEMICOLON       shift and go to state 38


state 31

    (14) decla_ids_list -> decla_identifier . COMMA decla_ids_list
    (15) decla_ids_list -> decla_identifier .

    COMMA           shift and go to state 39
    SEMICOLON       reduce using rule 15 (decla_ids_list -> decla_identifier .)


state 32

    (16) decla_identifier -> ID . LEFTSQRBRACKET CTEINT RIGHTSQRBRACKET LEFTSQRBRACKET CTEINT RIGHTSQRBRACKET
    (17) decla_identifier -> ID . LEFTSQRBRACKET CTEINT RIGHTSQRBRACKET
    (18) decla_identifier -> ID .

    LEFTSQRBRACKET  shift and go to state 40
    COMMA           reduce using rule 18 (decla_identifier -> ID .)
    SEMICOLON       reduce using rule 18 (decla_identifier -> ID .)
    RIGHTPARENTHESIS reduce using rule 18 (decla_identifier -> ID .)


state 33

    (32) function -> MODULE return_type ID . neupoint_add_function parameters_list vars neupoint_start_function block neupoint_check_for_return neupoint_end_function
    (33) function -> MODULE return_type ID . neupoint_add_function parameters_list neupoint_start_function block neupoint_check_for_return neupoint_end_function
    (38) neupoint_add_function -> .

    LEFTPARENTHESIS reduce using rule 38 (neupoint_add_function -> .)

    neupoint_add_function          shift and go to state 41

state 34

    (1) program -> PROGRAM ID SEMICOLON neupoint_goto_main vars functions_list MAIN neupoint_fill_goto_main . LEFTPARENTHESIS RIGHTPARENTHESIS block neupoint_end

    LEFTPARENTHESIS shift and go to state 42


state 35

    (2) program -> PROGRAM ID SEMICOLON neupoint_goto_main vars MAIN neupoint_fill_goto_main LEFTPARENTHESIS . RIGHTPARENTHESIS block neupoint_end

    RIGHTPARENTHESIS shift and go to state 43


state 36

    (3) program -> PROGRAM ID SEMICOLON neupoint_goto_main functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS . RIGHTPARENTHESIS block neupoint_end

    RIGHTPARENTHESIS shift and go to state 44


state 37

    (4) program -> PROGRAM ID SEMICOLON neupoint_goto_main MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS . block neupoint_end
    (54) block -> . LEFTBRACKET statutes_list RIGHTBRACKET
    (55) block -> . LEFTBRACKET RIGHTBRACKET

    LEFTBRACKET     shift and go to state 46

    block                          shift and go to state 45

state 38

    (12) vars_lists -> data_type decla_ids_list SEMICOLON . vars_lists
    (13) vars_lists -> data_type decla_ids_list SEMICOLON .
    (12) vars_lists -> . data_type decla_ids_list SEMICOLON vars_lists
    (13) vars_lists -> . data_type decla_ids_list SEMICOLON
    (8) data_type -> . INT
    (9) data_type -> . FLOAT
    (10) data_type -> . CHAR

    MAIN            reduce using rule 13 (vars_lists -> data_type decla_ids_list SEMICOLON .)
    MODULE          reduce using rule 13 (vars_lists -> data_type decla_ids_list SEMICOLON .)
    LEFTBRACKET     reduce using rule 13 (vars_lists -> data_type decla_ids_list SEMICOLON .)
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20

    data_type                      shift and go to state 17
    vars_lists                     shift and go to state 47

state 39

    (14) decla_ids_list -> decla_identifier COMMA . decla_ids_list
    (14) decla_ids_list -> . decla_identifier COMMA decla_ids_list
    (15) decla_ids_list -> . decla_identifier
    (16) decla_identifier -> . ID LEFTSQRBRACKET CTEINT RIGHTSQRBRACKET LEFTSQRBRACKET CTEINT RIGHTSQRBRACKET
    (17) decla_identifier -> . ID LEFTSQRBRACKET CTEINT RIGHTSQRBRACKET
    (18) decla_identifier -> . ID

    ID              shift and go to state 32

    decla_identifier               shift and go to state 31
    decla_ids_list                 shift and go to state 48

state 40

    (16) decla_identifier -> ID LEFTSQRBRACKET . CTEINT RIGHTSQRBRACKET LEFTSQRBRACKET CTEINT RIGHTSQRBRACKET
    (17) decla_identifier -> ID LEFTSQRBRACKET . CTEINT RIGHTSQRBRACKET

    CTEINT          shift and go to state 49


state 41

    (32) function -> MODULE return_type ID neupoint_add_function . parameters_list vars neupoint_start_function block neupoint_check_for_return neupoint_end_function
    (33) function -> MODULE return_type ID neupoint_add_function . parameters_list neupoint_start_function block neupoint_check_for_return neupoint_end_function
    (34) parameters_list -> . LEFTPARENTHESIS parameter RIGHTPARENTHESIS neupoint_add_parameters
    (35) parameters_list -> . LEFTPARENTHESIS RIGHTPARENTHESIS

    LEFTPARENTHESIS shift and go to state 51

    parameters_list                shift and go to state 50

state 42

    (1) program -> PROGRAM ID SEMICOLON neupoint_goto_main vars functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS . RIGHTPARENTHESIS block neupoint_end

    RIGHTPARENTHESIS shift and go to state 52


state 43

    (2) program -> PROGRAM ID SEMICOLON neupoint_goto_main vars MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS . block neupoint_end
    (54) block -> . LEFTBRACKET statutes_list RIGHTBRACKET
    (55) block -> . LEFTBRACKET RIGHTBRACKET

    LEFTBRACKET     shift and go to state 46

    block                          shift and go to state 53

state 44

    (3) program -> PROGRAM ID SEMICOLON neupoint_goto_main functions_list MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS . block neupoint_end
    (54) block -> . LEFTBRACKET statutes_list RIGHTBRACKET
    (55) block -> . LEFTBRACKET RIGHTBRACKET

    LEFTBRACKET     shift and go to state 46

    block                          shift and go to state 54

state 45

    (4) program -> PROGRAM ID SEMICOLON neupoint_goto_main MAIN neupoint_fill_goto_main LEFTPARENTHESIS RIGHTPARENTHESIS block . neupoint_end
    (7) neupoint_end -> .

    $end            reduce using rule 7 (neupoint_end -> .)

    neupoint_end                   shift and go to state 55

state 46
